tests/regression/error/hw5_error22.nex
var f;

fun g()
{
}

fun f()
{
}
